--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
-											by HTML5 UP</h1>
-											<p>A free and fully responsive site template</p>
+											<h1><br />
+											Open Warehouse Management System</h1>
+											<p>An open source software for intralogistics projects.</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>OpenWMS.org is a software project that targets the needs of modern warehouse management software systems in relation to customers and software suppliers. It is essential to operate with, and link to, a varying kind of enterprise systems to build an entire warehouse management system. Furthermore the availability of the software components must be guaranteed to provide services 24/7 uptime. Additionally to those requirements major attention is to build software in a modularized, component based architecture to meet all non-functional requirements as well.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
@@ -48,35 +48,35 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2 id="features">Erat lacinia</h2>
+										<h2 id="features">Technical Aspects</h2>
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-diamond"></span>
+											<span class="icon fa-cogs"></span>
 											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Microservices</h3>
+												<p>The Microservice architecture drives the design of the software towards small and well defined modules of <strong>business functions</strong> with high cohesion.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon fa-paper-plane"></span>
+											<span class="icon fa-cloud"></span>
 											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Cloud Native</h3>
+												<p>Strictly following the <strong>12-Factor</strong> manifesto all services are cloud enabled but do not have to run in the cloud.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon fa-rocket"></span>
+											<span class="icon fa-database"></span>
 											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Polyglot</h3>
+												<p>OpenWMS.org does not depend on a particular database vendor nor on the technology. Different services use different types of datastores. From <strong>relational</strong> to <strong>NoSQL</strong> databases.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon fa-signal"></span>
+											<span class="icon fa-puzzle-piece"></span>
 											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Workflow</h3>
+												<p>A workflow engine is used to control and change the <strong>material flow handling</strong> dynamically without interrupts and downtimes. </p>
 											</div>
 										</article>
 									</div>
@@ -85,7 +85,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ipsum sed dolor</h2>
+										<h2>Product Features</h2>
 									</header>
 									<div class="posts">
 										<article>
