--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/microservice_architecture.jpeg" alt="" style="height: auto"/>
 									</span>
 								</section>
 
@@ -62,7 +62,7 @@
 											<span class="icon fa-cloud"></span>
 											<div class="content">
 												<h3>Cloud Native</h3>
-												<p>Strictly following the <strong>12-Factor</strong> manifesto all services are cloud enabled but do not have to run in the cloud.</p>
+												<p>Strictly following the <strong><a href="https://12factor.net/" target="_blank">Twelve-Factor</a></strong> manifesto all services are cloud enabled but do not have to run in the cloud.</p>
 											</div>
 										</article>
 										<article>
@@ -83,7 +83,7 @@
 								</section>
 
 							<!-- Section -->
-								<section>
+								<!--section>
 									<header class="major">
 										<h2>Product Features</h2>
 									</header>
@@ -137,7 +137,7 @@
 											</ul>
 										</article>
 									</div>
-								</section>
+								</section-->
 
 						</div>
 					</div>
@@ -189,7 +189,7 @@
 								</nav>
 
 							<!-- Section -->
-								<section>
+								<!--section>
 									<header class="major">
 										<h2>Show Cases</h2>
 									</header>
@@ -210,7 +210,7 @@
 									<ul class="actions">
 										<li><a href="#" class="button">More</a></li>
 									</ul>
-								</section>
+								</section-->
 
 							<!-- Section -->
 								<section>
