--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 						<div class="inner">
 
 							<!-- Search -->
-								<section id="search" class="alt">
+								<!--section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
-								</section>
+								</section-->
 
 							<!-- Menu -->
 								<nav id="menu">
