--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2 id="features">Technical Aspects</h2>
+										<h2 id="features">Technical Features</h2>
 									</header>
 									<div class="features">
 										<article>
